tidy up for new vi services