@@ -6,7 +6,8 @@ apply plugin: 'distribution'
 group = projectGroup
 version = version ?: '1.0.0'
 archivesBaseName = projectName
-sourceCompatibility = 1.11
+sourceCompatibility = JavaVersion.valueOf('VERSION_17')
+
 jar.baseName = projectName
 
 ext {
@@ -18,16 +19,16 @@ sourceSets {
   acceptanceTest {
     groovy {
       srcDir file('/src/acceptanceTest/groovy')
-      compileClasspath += main.output + test.output + configurations.testRuntime
-      runtimeClasspath += output + compileClasspath
+        compileClasspath += main.output + test.output + configurations.testRuntimeOnly + configurations.testImplementation
+        runtimeClasspath += output + compileClasspath
     }
   }
 
   integrationTest {
     groovy {
       srcDir file('/src/integrationTest/groovy')
-      compileClasspath += main.output + test.output + configurations.testRuntime
-      runtimeClasspath += output + compileClasspath
+        compileClasspath += main.output + test.output + configurations.testRuntimeOnly + configurations.testImplementation
+        runtimeClasspath += output + compileClasspath
     }
   }
 }
@@ -35,8 +36,8 @@ sourceSets {
 distributions {
   main {
     contents {
-      from configurations.runtime.allArtifacts.files
-      from configurations.runtime
+      from configurations.runtimeOnly.allArtifacts.files
+      from configurations.runtimeOnly
     }
   }
 }
@@ -53,6 +54,9 @@ repositories {
 }
 
 configurations {
+  configurations.testImplementation.canBeResolved = true
+  configurations.testRuntimeOnly.canBeResolved = true
+  configurations.runtimeOnly.canBeResolved = true
   compile {
     exclude group: "org.springframework", module: "spring-jcl"
   }
@@ -60,12 +64,28 @@ configurations {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     resolutionStrategy.cacheDynamicVersionsFor 5, 'minutes'
   }
+
+
   acceptanceTestCompile.extendsFrom testImplementation
-  acceptanceTestRuntime.extendsFrom testRuntime
+  acceptanceTestRuntime.extendsFrom testRuntimeClasspath
   integrationTestCompile.extendsFrom testImplementation
   integrationTestRuntime.extendsFrom testRuntime
 }
 
+configurations.each {
+    c -> c.resolutionStrategy.dependencySubstitution {
+        all { DependencySubstitution dependency ->
+            if (dependency.requested.group == 'org.yaml') {
+                dependency.useTarget "org.yaml:snakeyaml:${snakeyamlVersion}"
+            }
+        }
+    }
+}
+
+ext {
+	snakeyamlVersion = '1.33'
+  set('snakeyaml.version', snakeyamlVersion)
+}
 task acceptanceTest(type: Test, group: 'verification') {
   testClassesDirs = sourceSets.acceptanceTest.output.classesDirs
   classpath = sourceSets.acceptanceTest.runtimeClasspath
@@ -111,3 +131,8 @@ if (qualityChecks.exists()) apply from: qualityChecks
 if (sonarQube.exists()) apply from: sonarQube
 if (publishArtifacts.exists()) apply from: publishArtifacts
 if (securityScan.exists()) apply from: securityScan
+
+tasks.withType(Test).configureEach {
+    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+             "--add-opens=java.base/java.util=ALL-UNNAMED"])
+}
